fix some small issues

--- a/Documentation/中文文档.md
+++ b/Documentation/中文文档.md
@@ -4,7 +4,7 @@
 
 Alpha-Vantage-API-Data 是一个用来获取股票数据信息的工具包。
 
-注意 : 用户可以访问 https://www.alphavantage.co/support/#api-key 来获取免费的API密钥。
+注意 : 用户可以访问 [https://www.alphavantage.co/support/#api-key](https://www.alphavantage.co/support/#api-key) 来获取免费的API密钥。
 
 ## 安装
 
